# Signal-anomoly-detection

./: CMakeLists.txt  README.md  ai_model.py  ai_model_v2.py  ai_model_v3.py  anomaly_model.tflite  main.cpp  main.py  model_data.h  shift_reg.pio
simulator/: CMakeLists.txt  main.c
